--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="styles/general.css" />
   <link rel="stylesheet" href="styles/header.css" />
   <link rel="stylesheet" href="styles/footer.css" />
+  <link rel="stylesheet" href="styles/home.css" />
 
   <!-- Linking Javascript -->
   <script defer src="script.js"></script> 
