Not Found page not working, updated code

--- a/pages/NotFound.html
+++ b/pages/NotFound.html
@@ -154,7 +154,7 @@
         </p>
         <button class="secondary-btn"
             onclick="location.href='../index.html'">
-            Learn more
+            Return Home
             <!-- <img src="icons/arrow-right.svg" 
               alt="" 
               class="btn-icon"> -->
