linking about page to index

--- a/pages/NotFound.html
+++ b/pages/NotFound.html
@@ -76,7 +76,7 @@
 
     <header>
       <nav>
-        <a href="index.html" class="brand">
+        <a href="../index.html" class="brand">
           <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" 
           aria-label="Realsam Logo" role="img" class="logo-svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
