--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="pages">
           <ul>
             <li>
-              <a href="#">About
+              <a href="pages/about.html">About
                 <div class="indicator"></div>
               </a>
             </li>
