commented out bg-ellipse

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="cursor"></div>
 
-  <div class="bg-ellipse"></div>
+  <!-- <div class="bg-ellipse"></div> -->
 
   <!-- SVGs -->
   <svg style="display: none;">
