working on project carousel buttons

--- a/index.html
+++ b/index.html
@@ -70,6 +70,33 @@
       <path d="M12.8 5L19.8 12L12.8 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </symbol>
 
+    <symbol id="icon-chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <desc>
+          Angle Left Streamline Icon: https://streamlinehq.com
+        </desc>
+      <!--! Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc.-->
+        <path d="M5.7151425 10.6162875c-0.7653225 0.76533 -0.7653225 2.008215 0 2.773545l9.79617 9.79617c0.76533 0.76533 
+                2.0082225 0.76533 2.773545 0s0.7653225 -2.008215 0 -2.7735374999999998L9.8723925 12 18.2787375 
+                3.5875349999999995c0.7653225 -0.7653225 0.7653225 -2.008215 0 -2.7735374999999998s-2.008215 -0.76533 
+                -2.773545 0L5.7090225 10.6101675Z" 
+                fill="currentColor" stroke-width="0.075">
+        </path>
+    </symbol>
+
+    <symbol id="icon-chevron-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <desc>
+          Chevron Right Streamline Icon: https://streamlinehq.com
+        </desc>
+      <!--! Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc.-->
+        <path d="M18.22704 10.813897500000001c0.6560324999999999 0.6560324999999999 0.6560324999999999 1.7214225 0 
+                2.377455l-10.076624999999998 10.076624999999998c-0.6560324999999999 0.6560324999999999 -1.7214225 0.6560324999999999 
+                -2.377455 0s-0.6560324999999999 -1.7214225 0 -2.377455L14.6634825 12 5.77821 3.1094774999999997c-0.6560324999999999 
+                -0.6560324999999999 -0.6560324999999999 -1.7214225 0 -2.377455s1.7214225 -0.6560324999999999 2.377455 0l10.076624999999998 
+                10.076624999999998Z" 
+                fill="currentColor" stroke-width="0.075">
+        </path>
+    </symbol>
+
     <symbol id="icon-behance" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <desc>
         Behance Streamline Icon: https://streamlinehq.com
@@ -608,6 +635,20 @@
           </div>
         </div>
         <div class="project-carousel">
+
+          <!-- <div class="project-controls">
+            <button class="secondary-btn" id="prevProject">
+              <svg class="icon">
+                <use href="#icon-chevron-left"></use>
+              </svg>
+            </button>
+            <button class="secondary-btn" id="nextProject">
+              <svg class="icon">
+                <use href="#icon-chevron-right"></use>
+              </svg>
+            </button>
+          </div> -->
+
           <div class="project-card">
             <a href="#" 
               class="project-link">
