fixing word breaks

--- a/index.html
+++ b/index.html
@@ -807,9 +807,31 @@
     //GSAP ScrollTrigger
     gsap.registerPlugin(ScrollTrigger)
 
-    const splitTypes = document.querySelectorAll ('.reveal-type-time')
+    const splitTypes = document.querySelectorAll ('.reveal-type-time, .reveal-type-scroll')
 
-    splitTypes.forEach((char,i) => {
+    splitTypes.forEach((word,i) => {
+
+      const text = new SplitType(word, { types: 'words'})
+
+      gsap.from(text.words, {
+        scrollTrigger: {
+          trigger: word,
+          start: 'top 80%',
+          end: 'top 20%',
+          scrub: false,
+          markers: false
+        },
+        y:100,
+        opacity: 0.2,
+        stagger: .01
+      })
+
+    })
+
+    /*
+    const splitTypesOnScroll = document.querySelectorAll ('.reveal-type-scroll')
+
+    splitTypesOnScroll.forEach((char,i) => {
 
       const text = new SplitType(char, { types: 'chars'})
 
@@ -823,31 +845,11 @@
         },
         y:100,
         opacity: 0.2,
-        stagger: .01
+        stagger: 0.1,
       })
 
-    })
+    }) */
 
-    const splitTypesOnScroll = document.querySelectorAll ('.reveal-type-scroll')
-
-    splitTypesOnScroll.forEach((char,i) => {
-
-      const text = new SplitType(char, { types: 'chars'})
-
-      gsap.from(text.chars, {
-        scrollTrigger: {
-          trigger: char,
-          start: 'top 80%',
-          end: 'top 20%',
-          scrub: true,
-          markers: false
-        },
-        y:100,
-        opacity: 0.2,
-        stagger: 0.1
-      })
-
-    })
 
     // Animate each block in About col-2
     gsap.utils.toArray(".stat").forEach((block) => {
