updating header links

--- a/index.html
+++ b/index.html
@@ -236,22 +236,22 @@
         <div class="pages">
           <ul>
             <li>
-              <a href="pages/about.html">About
+              <a href="about.html">About
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Services
+              <a href="services.html">Services
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Contact
+              <a href="contact.html">Contact
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Blog
+              <a href="blog.html">Blog
                 <div class="indicator"></div>
               </a>
             </li>
