--- a/about.html
+++ b/about.html
@@ -200,24 +200,22 @@
         <div class="pages">
           <ul>
             <li>
-              <a href="pages/about.html"
-                 class="current-page">
-                 About
+              <a href="about.html">About
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Services
+              <a href="services.html">Services
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Contact
+              <a href="contact.html">Contact
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Blog
+              <a href="blog.html">Blog
                 <div class="indicator"></div>
               </a>
             </li>
