Updating header html structure
replace img for realsam pro logo with svg use.

--- a/404.html
+++ b/404.html
@@ -76,34 +76,27 @@
 
     <header>
       <nav>
-        <a href="../index.html" class="brand">
-          <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" 
-          aria-label="Realsam Logo" role="img" class="logo-svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M20.96 7.46C20.96 4.44 18.52 2 15.5 2H7.06V4.83H15.16C16.72 4.83 17.99 6.12 
-                  17.99 7.68C17.99 9.25 16.72 10.54 15.16 10.54H7.06C4.23 10.76 2 13.12 2 
-                  16V16.5C2 19.51 4.44 21.96 7.46 21.96H15.9L14.46 19.08H7.81C6.25 19.08 
-                  4.98 17.79 4.98 16.22C4.98 14.84 5.97 13.67 7.28 13.42H15.5C18.52 13.42 20.96 
-                  10.97 20.96 7.96V7.46Z"
-                fill="currentColor" />
-              <path
-                d="M21.36 21.99C21.91 21.98 22.16 21.57 21.93 21.07L19.3 15.46C18.95 14.71 18 14.12 
-                  17.18 14.13L16.18 14.14C15.91 14.14 15.78 14.35 15.9 14.6L18.95 21.11C19.19 21.61 
-                  19.82 22.01 20.37 22L21.36 21.99Z"
-                fill="currentColor" />
-          </svg> -->
-          <div class="dark-themed">
-            <img src="../icons/realsam_logo_white.svg" 
-            alt="Realsam Logo" class="realsam-logo">
-          <img src="../icons/realsam_text_white.svg" 
-            alt="Realsam Logo" class="realsam-logo">
+        <a href="index.html" class="brand">
+          <div class="realsam-logo">
+            <svg class="icon">
+              <use href="#realsam-icon"></use>
+            </svg>
+            <svg class="icon">
+              <use href="#realsam-text"></use>
+            </svg>
+          </div>
+          <!-- <div class="dark-themed">
+            <img src="icons/realsam_logo_white.svg" 
+              alt="Realsam Logo" class="realsam-logo">
+            <img src="icons/realsam_text_white.svg" 
+              alt="Realsam Logo" class="realsam-logo">
           </div>
           <div class="light-themed">
-            <img src="../icons/realsam_logo_black.svg" 
-            alt="Realsam Logo" class="realsam-logo">
-          <img src="../icons/realsam_text_black.svg" 
-            alt="Realsam Logo" class="realsam-logo">
-          </div>
+            <img src="icons/realsam_logo_black.svg" 
+              alt="Realsam Logo" class="realsam-logo">
+            <img src="icons/realsam_text_black.svg" 
+              alt="Realsam Logo" class="realsam-logo">
+          </div> -->
         </a>
         <div class="pages">
           <ul>
