--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
   <link rel="stylesheet" href="styles/footer.css" />
   <link rel="stylesheet" href="styles/home.css" />
 
-  <!-- Linking Javascript -->
-  <script defer src="../script.js"></script> 
+  <!-- Linking Javascripts -->
+  <script defer src="scripts/general.js"></script>  
  
 </head>
 <body>
