styling thankyou modal

--- a/404.html
+++ b/404.html
@@ -209,7 +209,7 @@
           exist or has been moved
         </p>
         <button class="secondary-btn"
-            onclick="location.href='../index.html'">
+            onclick="location.href='index.html'">
             Return Home
             <!-- <img src="icons/arrow-right.svg" 
               alt="" 
