fixing captcha responsiveness
The captcha was overflowing on smaller screens.

--- a/contact.html
+++ b/contact.html
@@ -416,7 +416,11 @@
                 </li>
               </ul>
 
-              <div class="g-recaptcha" data-sitekey="6LfrjkgrAAAAAMSn9rHUxmokzBJc_cIiw8xFbVL9"></div>
+              <div class="captcha-wrapper">
+                <div class="g-recaptcha" 
+                  data-sitekey="6LfrjkgrAAAAAMSn9rHUxmokzBJc_cIiw8xFbVL9">
+                </div>
+              </div>
 
               <button type="submit" class="form-btn">Send</button>
             </form>
