setting up faq section

--- a/contact.html
+++ b/contact.html
@@ -283,8 +283,13 @@
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </symbol>
 
-    <symbol id="icon-x" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <symbol id="icon-x" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M18.2 6L6.2 18M6.2 6L18.2 18" 
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </symbol>
+
+    <symbol id="icon-plus" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12.1998 5V19M5.19983 12H19.1998" 
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </symbol>
 
@@ -436,6 +441,84 @@
               </svg>
             </button>
             <p>🎉 Thank you for your message! I'll get back to you soon.</p>
+          </div>
+        </div>
+      </section>
+
+      <div class="line"><div></div></div>
+
+      <section class="faq" aria-label="Frequently Asked Questions">
+        <div class="col-1">
+          <div class="section-title">
+            <h3 class="reveal-type-scroll">
+              FAQ
+            </h3>
+            <h2 class="reveal-type-scroll">
+              Quick Answers
+            </h2>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="faq-list">
+
+            <div class="faq-card">
+              <div class="faq-question">
+                <p>How do I start a project with you?</p>
+                <svg class="icon">
+                  <use href="#icon-plus"></use>
+                </svg>
+              </div>
+              <div class="faq-answer">
+                <p>First, you can reach out to me through the contact 
+                  form or email. We'll schedule an initial meeting to 
+                  discuss your needs and plan the project together.</p>
+              </div>
+              <div class="faq-line"></div>
+            </div>
+
+            <div class="faq-card">
+              <div class="faq-question">
+                <p>What tools do you use?</p>
+                <svg class="icon">
+                  <use href="#icon-plus"></use>
+                </svg>
+              </div>
+              <div class="faq-answer">
+                <p>I use Figma, VS Code, GitHub, 
+                  GSAP, React, and other modern tools 
+                  depending on project needs.</p>
+              </div>
+              <div class="faq-line"></div>
+            </div>
+
+            <div class="faq-card">
+              <div class="faq-question">
+                <p>Do you work on retainer or per project?</p>
+                <svg class="icon">
+                  <use href="#icon-plus"></use>
+                </svg>
+              </div>
+              <div class="faq-answer">
+                <p>Both options are available depending on project 
+                  size and scope. I'm flexible with billing structures.</p>
+              </div>
+              <div class="faq-line"></div>
+            </div>
+
+            <div class="faq-card">
+              <div class="faq-question">
+                <p>Can you redesign an existing site?</p>
+                <svg class="icon">
+                  <use href="#icon-plus"></use>
+                </svg>
+              </div>
+              <div class="faq-answer">
+                <p>Absolutely! I specialize in redesigns 
+                  that improve user experience and visual aesthetics.</p>
+              </div>
+              <div class="faq-line"></div>
+            </div>
+
           </div>
         </div>
       </section>
