--- a/404.html
+++ b/404.html
@@ -164,22 +164,22 @@
         <div class="pages">
           <ul>
             <li>
-              <a href="#">About
+              <a href="about.html">About
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Services
+              <a href="services.html">Services
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Contact
+              <a href="contact.html">Contact
                 <div class="indicator"></div>
               </a>
             </li>
             <li>
-              <a href="#">Blog
+              <a href="blog.html">Blog
                 <div class="indicator"></div>
               </a>
             </li>
