--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfolio website for Sam, a frontend and UX designer" />
 
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Samuel Nwaokocha – Frontend & UX Designer" />
+  <meta property="og:description" content="Crafting beautiful, accessible, and high-performance web experiences." />
+  <meta property="og:image" content="https://itzrealsam.github.io/realsam-pro/images/realsampro_thumbnail.png" />
+  <meta property="og:url" content="https://itzrealsam.github.io/realsam-pro" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card for Twitter Preview -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Samuel Nwaokocha – Frontend & UX Designer">
+  <meta name="twitter:description" content="Crafting beautiful, accessible, and high-performance web experiences.">
+  <meta name="twitter:image" content="https://itzrealsam.github.io/realsam-pro/images/realsampro_thumbnail.png">
+
   <title>realsam.pro | Contact</title>
 
   <!-- Dark theme: SVG + fallback PNG -->
