--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfolio website for Sam, a frontend and UX designer" />
+  <meta name="description" content="Portfolio website for Samuel Nwaokocha, a frontend and UX designer" />
 
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="Samuel Nwaokocha – Frontend & UX Designer" />
