--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
   <link rel="stylesheet" href="styles/footer.css" />
   <link rel="stylesheet" href="styles/home.css" />
 
-  <!-- Linking Javascripts -->
-  <script defer src="scripts/general.js"></script> 
-
   <!-- GSAP Core -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
 
@@ -52,6 +49,10 @@
 
   <script src="https://unpkg.com/split-type"></script>
   <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+
+  <!-- Linking Javascripts -->
+  <script defer src="scripts/general.js"></script> 
+  <script defer src="scripts/home.js"></script>
  
 </head>
 <body>
@@ -369,14 +370,11 @@
               </div>
             </div>
           </div>
-          <button class="primary-btn">
+          <button onclick="location.href='contact.html'" class="primary-btn">
               Get in Touch
-            <!-- <img src="icons/arrow-right.svg" 
-            alt="" 
-            class="btn-icon"> -->
-            <svg class="icon">
-              <use href="#icon-arrow-right"></use>
-            </svg>
+              <svg class="icon">
+                <use href="#icon-arrow-right"></use>
+              </svg>
           </button>
         </div>
         <div class="col-2">
@@ -867,128 +865,5 @@
 
   </div>
 
-  <script>
-
-    //GSAP ScrollTrigger
-    gsap.registerPlugin(ScrollTrigger)
-
-    const splitTypes = document.querySelectorAll ('.reveal-type-time, .reveal-type-scroll')
-
-    splitTypes.forEach((word,i) => {
-
-      const text = new SplitType(word, { types: 'words'})
-
-      gsap.from(text.words, {
-        scrollTrigger: {
-          trigger: word,
-          start: 'top 80%',
-          end: 'top 20%',
-          scrub: false,
-          markers: false
-        },
-        y:100,
-        opacity: 0.2,
-        stagger: .01
-      })
-
-    })
-
-    /*
-    const splitTypesOnScroll = document.querySelectorAll ('.reveal-type-scroll')
-
-    splitTypesOnScroll.forEach((char,i) => {
-
-      const text = new SplitType(char, { types: 'chars'})
-
-      gsap.from(text.chars, {
-        scrollTrigger: {
-          trigger: char,
-          start: 'top 80%',
-          end: 'top 20%',
-          scrub: false,
-          markers: false
-        },
-        y:100,
-        opacity: 0.2,
-        stagger: 0.1,
-      })
-
-    }) */
-
-
-    // Animate each block in About col-2
-    gsap.utils.toArray(".stat").forEach((block) => {
-      gsap.fromTo(
-        block,
-        { opacity: 0, x: -50 },
-        {
-          opacity: 1,
-          x: 0,
-          duration: 1,
-          scrollTrigger: {
-            trigger: block,
-            start: "top 80%",
-            end: "top 60%",
-            scrub: true,
-          },
-        }
-      );
-    });
-
-    // Animate each block in Services col-2
-    gsap.utils.toArray(".service-card").forEach((block) => {
-      gsap.fromTo(
-        block,
-        { opacity: 0, x: 50 },
-        {
-          opacity: 1,
-          x: 0,
-          duration: 1,
-          scrollTrigger: {
-            trigger: block,
-            start: "top 80%",
-            end: "top 60%",
-            scrub: true,
-          },
-        }
-      );
-    });
-
-    // Animate each block in Testimonials col-2
-    gsap.utils.toArray(".testimonial-card").forEach((block) => {
-      gsap.fromTo(
-        block,
-        { opacity: 0, y: 50 },
-        {
-          opacity: 1,
-          y: 0,
-          duration: 1,
-          scrollTrigger: {
-            trigger: block,
-            start: "top 80%",
-            end: "top 60%",
-            scrub: true,
-          },
-        }
-      );
-    });
-
-    // Lenis Basic Setup
-    const lenis = new Lenis()
-
-    lenis.on('scroll', (e) => {
-      console.log(e)
-    })
-
-    function raf(time) {
-      lenis.raf(time)
-      requestAnimationFrame(raf)
-    }
-
-    requestAnimationFrame(raf)
-
-
-
-  </script>
 </body>
 </html>
