--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Portfolio website for Samuel Nwaokocha, a frontend and UX designer" />
 
   <!-- Open Graph Meta Tags for Social Media -->
-  <meta property="og:title" content="Samuel Nwaokocha – Frontend & UX Designer" />
+  <meta property="og:title" content="Samuel Nwaokocha – Frontend Developer & UX Designer" />
   <meta property="og:description" content="Crafting beautiful, accessible, and high-performance web experiences." />
   <meta property="og:image" content="https://itzrealsam.github.io/realsam-pro/images/realsampro_thumbnail.png" />
   <meta property="og:url" content="https://itzrealsam.github.io/realsam-pro" />
@@ -14,7 +14,7 @@
 
   <!-- Twitter Card for Twitter Preview -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Samuel Nwaokocha – Frontend & UX Designer">
+  <meta name="twitter:title" content="Samuel Nwaokocha – Frontend Developer & UX Designer">
   <meta name="twitter:description" content="Crafting beautiful, accessible, and high-performance web experiences.">
   <meta name="twitter:image" content="https://itzrealsam.github.io/realsam-pro/images/realsampro_thumbnail.png">
 
