--- a/about.html
+++ b/about.html
@@ -387,12 +387,23 @@
         <h2 class="reveal-type-scroll">
           More than <span>aesthetics...</span>
         </h2>
-        <button class="secondary-btn">
+        <a href="resume/Resume_SamuelNwaokocha-compressed.pdf" 
+          target="_blank" 
+          rel="noopener noreferrer" 
+          download 
+          class="btn download-resume">
+          Download Resume
+          <svg class="icon" width="16" height="16">
+            <use href="#icon-download"></use>
+          </svg>
+        </a>
+
+        <!-- <button class="secondary-btn">
             Download Resume
             <svg class="icon">
               <use href="#icon-download"></use>
             </svg>
-          </button>
+        </button> -->
       </section>
 
       <div class="line"><div></div></div>
@@ -546,6 +557,24 @@
             </div>
 
           </div>          
+        </div>
+      </section>
+
+      <div class="line"><div></div></div>
+
+      <section class="clients">
+        <div class="col-1">
+          <div class="section-title">
+            <h3 class="reveal-type-scroll">
+              Clients
+            </h3>
+            <h2 class="reveal-type-scroll">
+              Brands I've Worked With?
+            </h2>
+          </div>
+        </div>
+        <div class="col-2">
+          
         </div>
       </section>
 
