--- a/contact.html
+++ b/contact.html
@@ -476,13 +476,15 @@
           <div class="faq-list">
 
             <div class="faq-card">
-              <div class="faq-question">
+              <div class="faq-question"
+                  aria-expanded="false" aria-controls="answer-1">
                 <p>How do I start a project with you?</p>
                 <svg class="icon">
                   <use href="#icon-plus"></use>
                 </svg>
               </div>
-              <div class="faq-answer">
+              <div class="faq-answer"
+                  id="answer-1" role="region" aria-hidden="true">
                 <p>First, you can reach out to me through the contact 
                   form or email. We'll schedule an initial meeting to 
                   discuss your needs and plan the project together.</p>
@@ -490,14 +492,16 @@
               <div class="faq-line"></div>
             </div>
 
-            <div class="faq-card">
+            <div class="faq-card"
+                aria-expanded="false" aria-controls="answer-1">
               <div class="faq-question">
                 <p>What tools do you use?</p>
                 <svg class="icon">
                   <use href="#icon-plus"></use>
                 </svg>
               </div>
-              <div class="faq-answer">
+              <div class="faq-answer"
+                  id="answer-1" role="region" aria-hidden="true">
                 <p>I use Figma, VS Code, GitHub, 
                   GSAP, React, and other modern tools 
                   depending on project needs.</p>
@@ -505,14 +509,16 @@
               <div class="faq-line"></div>
             </div>
 
-            <div class="faq-card">
+            <div class="faq-card"
+                aria-expanded="false" aria-controls="answer-1">
               <div class="faq-question">
                 <p>Do you work on retainer or per project?</p>
                 <svg class="icon">
                   <use href="#icon-plus"></use>
                 </svg>
               </div>
-              <div class="faq-answer">
+              <div class="faq-answer"
+                  id="answer-1" role="region" aria-hidden="true">
                 <p>Both options are available depending on project 
                   size and scope. I'm flexible with billing structures.</p>
               </div>
@@ -520,13 +526,15 @@
             </div>
 
             <div class="faq-card">
-              <div class="faq-question">
+              <div class="faq-question"
+                  aria-expanded="false" aria-controls="answer-1">
                 <p>Can you redesign an existing site?</p>
                 <svg class="icon">
                   <use href="#icon-plus"></use>
                 </svg>
               </div>
-              <div class="faq-answer">
+              <div class="faq-answer"
+                  id="answer-1" role="region" aria-hidden="true">
                 <p>Absolutely! I specialize in redesigns 
                   that improve user experience and visual aesthetics.</p>
               </div>
