--- a/about.html
+++ b/about.html
@@ -393,7 +393,7 @@
           download 
           class="btn download-resume">
           Download Resume
-          <svg class="icon" width="16" height="16">
+          <svg class="icon">
             <use href="#icon-download"></use>
           </svg>
         </a>
