update footer links

--- a/contact.html
+++ b/contact.html
@@ -585,7 +585,9 @@
         </div>
         <div class="col-2">
           <div class="footer-tab">
-            <a href="https://www.behance.net/itzrealsam" 
+            <a href="https://www.behance.net/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-behance"></use>
@@ -596,7 +598,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.twitter.com/itzrealsam" 
+            <a href="https://www.twitter.com/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-twitter"></use>
@@ -607,7 +611,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.linkedin.com/itzrealsam" 
+            <a href="https://www.linkedin.com/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-linkedin"></use>
@@ -618,7 +624,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.instagram.com/iam.realsam" 
+            <a href="https://www.instagram.com/iam.realsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-instagram"></use>
