--- a/index.html
+++ b/index.html
@@ -817,7 +817,9 @@
         </div>
         <div class="col-2">
           <div class="footer-tab">
-            <a href="https://www.behance.net/itzrealsam" 
+            <a href="https://www.behance.net/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-behance"></use>
@@ -828,7 +830,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.twitter.com/itzrealsam" 
+            <a href="https://www.twitter.com/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-twitter"></use>
@@ -839,7 +843,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.linkedin.com/itzrealsam" 
+            <a href="https://www.linkedin.com/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-linkedin"></use>
@@ -850,7 +856,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.instagram.com/iam.realsam" 
+            <a href="https://www.instagram.com/iam.realsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-instagram"></use>
