--- a/about.html
+++ b/about.html
@@ -583,7 +583,6 @@
     </main>
 
     <footer>
-      <!-- Not necessary we are in the contact page already
       <div class="row-1">
         <div class="col-1">
           <h3>
@@ -603,7 +602,7 @@
         </div>
       </div>
 
-      <div class="line"><div></div></div> -->
+      <div class="line"><div></div></div>
       
       <div class="row-2">
         <div class="col-1">
@@ -618,7 +617,9 @@
         </div>
         <div class="col-2">
           <div class="footer-tab">
-            <a href="https://www.behance.net/itzrealsam" 
+            <a href="https://www.behance.net/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-behance"></use>
@@ -629,7 +630,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.twitter.com/itzrealsam" 
+            <a href="https://www.twitter.com/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-twitter"></use>
@@ -640,7 +643,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.linkedin.com/itzrealsam" 
+            <a href="https://www.linkedin.com/itzrealsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-linkedin"></use>
@@ -651,7 +656,9 @@
             </a>
           </div>
           <div class="footer-tab">
-            <a href="https://www.instagram.com/iam.realsam" 
+            <a href="https://www.instagram.com/iam.realsam"
+              target="_blank" 
+              rel="noopener noreferrer"
               class="footer-link">
               <svg class="icon">
                 <use href="#icon-instagram"></use>
